chore: fix text sizes in imageblock on mobile devices

--- a/src/main/resources/assets/styles/foundation/_typography.scss
+++ b/src/main/resources/assets/styles/foundation/_typography.scss
@@ -81,3 +81,8 @@ h3 {
     line-height: 38px;
   }
 }
+
+// fix for issues
+.xp-admin-common-names-view .xp-admin-common-sub-name {
+  white-space: nowrap !important;
+}
